--- a/style.css
+++ b/style.css
@@ -110,9 +110,12 @@ header div h2 a:hover {
 
 
 
+
+
+
+
 @media(max-width: 530px)
 {
-
   /*** introduction 1 Section ***/
  #introduction1Section h2{
   font-size: 120px;
@@ -153,64 +156,34 @@ margin-top: 100px;
 }
 
 /*** resume section ***/
-#resumeSection h1{ 
+#resumeSection h1{
   font-size: 100px;
 }
-#resumeSection > div { 
-  flex-direction: column;
-  width: 80%;
-  font-size: 70px;
-  padding: 100px 50px;
-} 
-#resumeSection > div > div {
-  flex-basis: auto;
- margin-bottom: 100px; 
-}
 
-  /**** hobby section ****/
-  
-  #hobbySection h1{
-  font-size: 100px; 
+
+  /**** gallery ***************/
+  .v-stretch{
+      grid-row: span 1;
   }
-  #hobbySection p{
-    font-size: 70px;
-    width: 80%;
+  .h-stretch{
+      grid-column: span 1;
   }
-  
+  .big-stretch{
+      grid-column: span 1;
+      grid-row: span 1;
+  }
+
   .gallery {
-    display: flex;
-    flex-direction: column;
-    padding: 80px 20px;
-
+    padding: 10px;
+    max-width: 1300px;
+    margin: 0 auto;
+    display: grid;
+    grid-gap: 10px;
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
+    grid-auto-rows: 200px;
+    grid-auto-flow: dense;
   }
 
-/**** Contact Section ****/
-
-  #addressSection * {
-    font-size: 70px;
-  }
-  #addressSection h1{
-  font-size: 100px;
-  }
-  #addressSection #emailForm{
-    padding: 100px 50px;
-  }
-  #addressSection #emailForm > input{
-    width: 100%;
-  }
-  #addressSection #message{
-    height: 500px;
-  }
-  #addressSection p{
-    text-align: center;
-  }
-
-/**** Footer Section ****/
-  #footerSection footer p{
-    font-size: 70px;
-    margin-top: 50px;
-    margin-bottom: 50px;
-  }
 }
 
 
