--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@
 /**** element selector ****/
 html {
   background-color: white;
-  display: flex;
+  
+  
 }
 
 body {
@@ -17,7 +18,6 @@ body {
   display: flex;
   justify-content: center;
   flex-direction: column;
-  flex-basis: 100%;
 }
 
 
@@ -52,14 +52,12 @@ body {
   object-fit: cover;
 }
 
-
 .loader {
   border-radius: 50%;
   border-style: solid;
   border-color: rgba(23, 24, 23, 0.3);
   border-top-color:  rgba(7, 117, 7, 0.3); 
   border-bottom-color: rgba(7, 117, 7, 0.3); 
-
 }
 
 .time_20s {
@@ -104,88 +102,87 @@ header div h2 a:hover {
 
 
 
-
-
 /***** responsive ***********************/
-
-
-
-
-
 
 
 @media(max-width: 530px)
 {
+
+
   /*** introduction 1 Section ***/
- #introduction1Section h2{
-  font-size: 120px;
+ #introduction1Section h1{
+  font-size: 35px;
  }
  #introduction1Section p{
-  font-size: 70px;
+  font-size: 20px;
  }
  #introduction1Section img {
-  height: 450px;
+  height: 150px; 
  }
  
- 
   /*** introduction 2 Section ***/
-#introduction2Section img {
-  height: 300px;
-  width: 300px;
-}
-#introduction2Section h1{
-  font-size: 100px;
-}
-#introduction2Section p{
-  font-size: 70px;
-  text-align: justify;
-  margin-bottom: 100px;
-}
-
-/*** Skill section ***/
-#skillsSection h1{
-font-size: 100px;
-margin-top: 100px;
-
-}
-#skillsSection div{
-  font-size: 70px;
-  margin-bottom: 100px;
-  width: 90%;
-  padding:80px 20px;
-}
-
-/*** resume section ***/
-#resumeSection h1{
-  font-size: 100px;
-}
-
-
-  /**** gallery ***************/
-  .v-stretch{
-      grid-row: span 1;
+  #introduction2Section img {
+    height: 150px; 
+    max-width: 150px;
   }
-  .h-stretch{
-      grid-column: span 1;
+  #introduction2Section h1{
+    font-size: 35px;
   }
-  .big-stretch{
-      grid-column: span 1;
-      grid-row: span 1;
+  #introduction2Section p{
+    font-size: 20px;
+    text-align: justify;
+    margin-bottom: 100px;
+    max-width: 300px;
   }
 
+  /*** Skill section ***/
+  #skillsSection h1{
+    font-size: 30px;
+    margin-top: 100px;
+  }
+  #skillsSection div{
+    font-size: 20px;
+    margin-bottom: 100px;
+    max-width: 250px;
+    padding:60px 50px;
+  }
+
+ /*** resume section ***/
+  #resumeSection h1{
+    font-size: 35px;
+  } 
+  #resumeSection > div {
+    flex-direction: column;
+    gap: 20px; 
+    padding: auto; 
+    max-width: 250px;
+  }
+  #resumeSection > div > div {
+    flex-basis: auto;
+  }
+
+  /**** hobby section *******/
+  #hobbySection h1{
+    font-size: 35px;
+  }
+  #hobbySection p{
+    font-size: 20px;
+    max-width: 300px;
+  }   
   .gallery {
-    padding: 10px;
-    max-width: 1300px;
-    margin: 0 auto;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
-    grid-auto-rows: 200px;
-    grid-auto-flow: dense;
+    display: flex;
+    flex-direction: column; 
+    max-width: 400px;
   }
 
+  /**** contact section ******/
+  #contactSection *{
+    font-size: 20px;
+  }
+  #contactSection h1 {
+    font-size: 35px;
+  }
 }
-
 
 
 /* ==== C O M M O N   C O D E ============================================================================== */
@@ -277,7 +274,6 @@ margin-top: 100px;
 .w_1000 {width: 1000px;}
 
 
-
 .h_100vh{height: 100vh;}
 .h_100p {height: 100%;}
 .h_60 {height: 60px;}
@@ -345,5 +341,3 @@ margin-top: 100px;
 
 
 .borderRadius_50p {border-radius: 50%;}
-
-
