--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-* {
+* { 
   padding: 0;
   margin: 0;
 }
@@ -27,21 +27,21 @@ body {
   color: #3f5706;
 }
 
-#emailForm * {
+/* #emailForm * {
   font-size: 20px;
   border-radius: 3px;
   border-width: 1px;
   padding: 5px;
-}
+} */
 
 
 /**** class selector *********/
 .gallery {
-  padding: 10px;
-  max-width: 1300px;
+  padding: auto;
+  max-width: 90%;
   margin: 0 auto;
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 5px;
   grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
   grid-auto-rows: 200px;
   grid-auto-flow: dense;
@@ -243,6 +243,7 @@ header div h2 a:hover {
 
 .m_0 {margin: 0;}
 .mt_0 {margin-top: 0;}
+.mt_1p {margin-top: 1%;}
 .mt_2p {margin-top: 2%;}
 .mt_3p {margin-top: 3%;}
 .mt_4p {margin-top: 4%;}
@@ -259,13 +260,15 @@ header div h2 a:hover {
 .ml_30 {margin-left: 30px;}
 .mb_0 {margin-bottom: 0;}
 .mb_3p {margin-bottom: 3%;}
+.mb_5p {margin-bottom: 3%;}
+.mb_5p {margin-bottom: 5%;}
 .mb_10 {margin-bottom: 10px;}
 .mb_30 {margin-bottom: 30px;}
 .mb_70 {margin-bottom: 70px;}
 
-
 .p_0 {padding: 0;} 
 .p_5 {padding: 5px;} 
+.p_1p {padding: 1%;} 
 .p_2p {padding: 2%;} 
 .p_3p {padding: 3%;} 
 .p_4p {padding: 4%;} 
@@ -319,11 +322,15 @@ header div h2 a:hover {
 .mh_25p {max-height: 25%;}
 .mh_50p {max-height: 50%;}
 
-.mw_25p {max-width: 25%;}
+.mw_10p {max-width: 10%;}
+.mw_20p {max-width: 20%;}
+.mw_30p {max-width: 30%;}
+.mw_40p {max-width: 40%;}
 .mw_50p {max-width: 50%;}
 .mw_60p {max-width: 60%;}
 .mw_70p {max-width: 70%;}
 .mw_80p {max-width: 80%;}
+.mw_90p {max-width: 90%;}
 .mw_100p {max-width: 100%;}
 
 .color_white {color: white;}
@@ -334,9 +341,7 @@ header div h2 a:hover {
 .color_4 {color: rgb(216, 224, 231);}
 .color_5 {color: #3f5706;}
 
-
 .t_0 {top: 0;}
-
 
 .display_flex {display: flex;}
 .display_grid {display: grid;}
@@ -375,7 +380,6 @@ header div h2 a:hover {
 .ff_1 { font-family: "Merriweather", serif;}
 
 
-
 .fs_20 {font-size: 20px;}
 .fs_30 {font-size: 30px;}
 .fs_50 {font-size: 50px;}
@@ -383,6 +387,7 @@ header div h2 a:hover {
 
 .fs_1rem {font-size: 1rem;}
 .fs_2rem {font-size: 2rem;}
+.fs_2p5rem {font-size: 2.5rem;}
 .fs_3rem {font-size: 3rem;}
 .fs_4rem {font-size: 4rem;}
 .fs_5rem {font-size: 5rem;}
@@ -391,7 +396,6 @@ header div h2 a:hover {
 .fs_8rem {font-size: 8rem;}
 .fs_9rem {font-size: 9rem;}
 .fs_10rem {font-size: 10rem;}
-
 
 .borderRadius_50p {border-radius: 50%;}
 
