--- a/style.css
+++ b/style.css
@@ -104,96 +104,64 @@ header div h2 a:hover {
 
 
 /***** responsive ***********************/
-/* 
+
+
+@media(max-width: 1360px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+    grid-auto-rows: 150px;
+  }
+}
+
+@media(max-width: 1030px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
+    grid-auto-rows: 120px;
+  }
+}
+
+@media(max-width: 830px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+    grid-auto-rows: 100px;
+  }
+}
+
+@media(max-width: 700px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(90px,1fr));
+    grid-auto-rows: 90px;
+  }
+}
+
+@media(max-width: 630px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(80px,1fr));
+    grid-auto-rows: 80px;
+  }
+}
+
+@media(max-width: 561px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(70px,1fr));
+    grid-auto-rows: 70px;
+  }
+}
 
 @media(max-width: 530px)
 {
- 
-  html {
-    width: 100%;
-  } */
-
-  /*** introduction 1 Section ***/
- /* #introduction1Section h1{
-  font-size: 35px;
- }
- #introduction1Section p{
-  font-size: 20px;
- }
- #introduction1Section img {
-  height: 150px; 
- } */
- 
-  /*** introduction 2 Section ***/
-  /* #introduction2Section img {
-    height: 150px; 
-    max-width: 150px;
-  }
-  #introduction2Section h1{
-    font-size: 35px;
-  }
-  #introduction2Section p{
-    font-size: 20px;
-    text-align: justify;
-    margin-bottom: 100px;
-    max-width: 300px;
-  } */
-
-  /*** Skill section ***/
-  /* #skillsSection h1{
-    font-size: 30px;
-    margin-top: 100px;
-  }
-  #skillsSection div{
-    font-size: 20px;
-    margin-bottom: 100px;
-    max-width: 250px;
-    padding:60px 50px;
-  } */
-
- /*** resume section ***/
-  /* #resumeSection h1{
-    font-size: 35px;
-  } 
-  #resumeSection > div {
-    flex-direction: column;
-    gap: 20px; 
-    padding: auto; 
-    max-width: 250px;
-  }
-  #resumeSection > div > div {
-    flex-basis: auto;
-  } */
-
-  /**** hobby section *******/
-  /* #hobbySection h1{
-    font-size: 35px;
-  }
-  #hobbySection p{
-    font-size: 20px;
-    max-width: 300px;
-  }   
-  .gallery {
+  .gallery{
     display: flex;
-    flex-direction: column; 
-    max-width: 400px;
-  } */
-
-  /**** contact section ******/
-  /* #contactSection *{
-    font-size: 20px;
+    flex-direction: column;
   }
-  #contactSection h1 {
-    font-size: 35px;
-  }
-  #contactSection form{
-    padding: 30px 20px;
-  }
-
-} */
-
-
-/* ==== C O M M O N   C O D E ============================================================================== */
+}
+/* ==== C O M M O N  s C O D E ============================================================================== */
 
 .position_sticky {position:-webkit-sticky; position: sticky; }
 .position_fixed {position: fixed;}
