--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 
-* {
+* { 
   padding: 0;
   margin: 0;
 }
@@ -9,7 +9,6 @@
 html {
   background-color: white;
   display: flex;
-  font-size: 16px;
   font-size: .5vw;
 }
 
@@ -27,21 +26,21 @@ body {
   color: #3f5706;
 }
 
-#emailForm * {
+/* #emailForm * {
   font-size: 20px;
   border-radius: 3px;
   border-width: 1px;
   padding: 5px;
-}
+} */
 
 
 /**** class selector *********/
 .gallery {
-  padding: 10px;
-  max-width: 1300px;
+  padding: auto;
+  max-width: 90%;
   margin: 0 auto;
   display: grid;
-  grid-gap: 10px;
+  grid-gap: 5px;
   grid-template-columns: repeat(auto-fit,minmax(200px,1fr));
   grid-auto-rows: 200px;
   grid-auto-flow: dense;
@@ -104,96 +103,129 @@ header div h2 a:hover {
 
 
 /***** responsive ***********************/
-/* 
+
+/* @media(max-width: 1965px) */
+@media(max-width: 1970px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(250px,1fr)); 
+    grid-auto-rows: 250px;
+  }
+}
+
+/* @media(max-width: 1695px) */
+@media(max-width: 1700px)
+{ 
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(200px,1fr)); 
+    grid-auto-rows: 200px;
+  }
+}
+
+
+/* @media(max-width: 1360px) */
+@media(max-width: 1370px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(150px,1fr));
+    grid-auto-rows: 150px;
+  }
+  html{
+    font-size: 1vh;
+  }
+}
+
+@media(max-width: 1030px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(120px,1fr));
+    grid-auto-rows: 120px;
+  }
+}
+
+@media(max-width: 830px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(100px,1fr));
+    grid-auto-rows: 100px;
+  }
+  #resumeSection > div{
+    flex-direction: column;
+    gap: 20px;
+  }
+  #skillsSection > div{
+    width: 50%;
+  }
+  #introduction1Section > div{
+    max-width: 70%;
+  }
+  #introduction2Section > img{
+    max-width: 30%;
+    max-height: 30%;
+  }
+}
+
+@media(max-width: 700px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(90px,1fr));
+    grid-auto-rows: 90px;
+  }
+}
+
+@media(max-width: 630px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(80px,1fr));
+    grid-auto-rows: 80px;
+  }
+}
+
+@media(max-width: 565px)
+{
+  .gallery {
+    grid-template-columns: repeat(auto-fit,minmax(70px,1fr));
+    grid-auto-rows: 70px;
+  }
+}
 
 @media(max-width: 530px)
 {
- 
-  html {
-    width: 100%;
-  } */
-
-  /*** introduction 1 Section ***/
- /* #introduction1Section h1{
-  font-size: 35px;
- }
- #introduction1Section p{
-  font-size: 20px;
- }
- #introduction1Section img {
-  height: 150px; 
- } */
- 
-  /*** introduction 2 Section ***/
-  /* #introduction2Section img {
-    height: 150px; 
-    max-width: 150px;
+  html{
+    font-size: .7vh;
   }
-  #introduction2Section h1{
-    font-size: 35px;
+  #introduction1Section > h1{
+    margin-top: 15%;
   }
-  #introduction2Section p{
-    font-size: 20px;
-    text-align: justify;
-    margin-bottom: 100px;
-    max-width: 300px;
-  } */
-
-  /*** Skill section ***/
-  /* #skillsSection h1{
-    font-size: 30px;
-    margin-top: 100px;
+  #introduction2Section > img{
+    margin-top: 15%; 
   }
-  #skillsSection div{
-    font-size: 20px;
-    margin-bottom: 100px;
-    max-width: 250px;
-    padding:60px 50px;
-  } */
-
- /*** resume section ***/
-  /* #resumeSection h1{
-    font-size: 35px;
-  } 
-  #resumeSection > div {
-    flex-direction: column;
-    gap: 20px; 
-    padding: auto; 
-    max-width: 250px;
+  #skillsSection > h1{
+    margin-top: 15%; 
   }
-  #resumeSection > div > div {
-    flex-basis: auto;
-  } */
-
-  /**** hobby section *******/
-  /* #hobbySection h1{
-    font-size: 35px;
+  #resumeSection > h1{
+    margin-top: 15%; 
   }
-  #hobbySection p{
-    font-size: 20px;
-    max-width: 300px;
-  }   
-  .gallery {
+  #hobbySection > h1{
+    margin-top: 15%; 
+  }
+  #contactSection > h1{
+    margin-top: 15%; 
+  }
+  #contactSection > form > #email{
+    max-width: 100%;
+  }
+  #contactSection > form > #message{
+    margin-top: 5%;
+    margin-bottom: 5%;
+  }
+  .gallery{
     display: flex;
-    flex-direction: column; 
-    max-width: 400px;
-  } */
-
-  /**** contact section ******/
-  /* #contactSection *{
-    font-size: 20px;
+    flex-direction: column;
   }
-  #contactSection h1 {
-    font-size: 35px;
-  }
-  #contactSection form{
-    padding: 30px 20px;
-  }
+}
 
-} */
-
-
-/* ==== C O M M O N   C O D E ============================================================================== */
+/* ==== C O M M O N  s C O D E ============================================================================== */
 
 .position_sticky {position:-webkit-sticky; position: sticky; }
 .position_fixed {position: fixed;}
@@ -201,27 +233,11 @@ header div h2 a:hover {
 .textAlign_center {text-align: center;} 
 .boxSizing_borderBox {box-sizing: border-box;}
 
-.z_-1{z-index: -1;}
-
 .ta_start {text-align: start;}
 .ta_center {text-align: center;}
 
 .br_5 {border-radius: 5px;}
 .br_15 {border-radius: 15px;}
-
-.bw_1 {border-width: 1px;}
-.bw_8p75 {border-width: 8.75px;}
-.bw_9 {border-width: 9px;}
-.bw_10 {border-width: 10px;}
-.bw_15 {border-width: 15px;}
-.bw_20 {border-width: 20px;}
-.bw_25 {border-width: 25px;}
-.bw_30 {border-width: 30px;}
-
-
-.top_0 {top: 0;} 
-.top_210 {top: 210px;} 
-.top_368 {top: 368px;} 
 
 .bg_black {background-color: black;}
 .bg_white {background-color: white;}
@@ -241,41 +257,30 @@ header div h2 a:hover {
 .bg_5 {background-color: rgb(196, 205, 212);}
 
 
-.m_0 {margin: 0;}
-.mt_0 {margin-top: 0;}
+.mt_1p {margin-top: 1%;}
 .mt_2p {margin-top: 2%;}
 .mt_3p {margin-top: 3%;}
 .mt_4p {margin-top: 4%;}
 .mt_5p {margin-top: 5%;}
-.mt_20 {margin-top: 20px;}
-.mt_30 {margin-top: 30px;}
-.mt_50 {margin-top: 50px;}
-.mt_70 {margin-top: 70px;}
-.mt_100 {margin-top: 100px;}
-.mtb_10 {margin: 10px 0;}
+.mt_6p {margin-top: 6%;}
+.mt_7p {margin-top: 7%;}
+.mt_8p {margin-top: 8%;}
+.mt_9p {margin-top: 9%;}
+.mt_10p {margin-top: 10%;}
+
 .mtb_1p {margin: 1% 0;}
 .mtb_1p5p {margin: 1.5% 0;}
-.mtb_2p {margin: 2% 0;}
-.ml_30 {margin-left: 30px;}
-.mb_0 {margin-bottom: 0;}
+
 .mb_3p {margin-bottom: 3%;}
-.mb_10 {margin-bottom: 10px;}
-.mb_30 {margin-bottom: 30px;}
-.mb_70 {margin-bottom: 70px;}
+.mb_5p {margin-bottom: 5%;}
+.mb_10p {margin-bottom: 10%;}
+.mb_15p {margin-bottom: 15%;}
 
-
-.p_0 {padding: 0;} 
-.p_5 {padding: 5px;} 
+.p_1p {padding: 1%;} 
 .p_2p {padding: 2%;} 
 .p_3p {padding: 3%;} 
 .p_4p {padding: 4%;} 
 .p_5p {padding: 5%;} 
-.p_20 {padding: 20px;}
-.p_50 {padding: 50px;}
-.pb_100 {padding: auto;}
-.ptb_50 {padding: 50px 0;}
-.plr_50 {padding: 0 50px;}
-.p_50-300 {padding: 50px 300px;}
 
 .w_25p {width: 30%;}
 .w_100p {width: 100%;}
@@ -319,11 +324,15 @@ header div h2 a:hover {
 .mh_25p {max-height: 25%;}
 .mh_50p {max-height: 50%;}
 
-.mw_25p {max-width: 25%;}
+.mw_10p {max-width: 10%;}
+.mw_20p {max-width: 20%;}
+.mw_30p {max-width: 30%;}
+.mw_40p {max-width: 40%;}
 .mw_50p {max-width: 50%;}
 .mw_60p {max-width: 60%;}
 .mw_70p {max-width: 70%;}
 .mw_80p {max-width: 80%;}
+.mw_90p {max-width: 90%;}
 .mw_100p {max-width: 100%;}
 
 .color_white {color: white;}
@@ -334,9 +343,7 @@ header div h2 a:hover {
 .color_4 {color: rgb(216, 224, 231);}
 .color_5 {color: #3f5706;}
 
-
 .t_0 {top: 0;}
-
 
 .display_flex {display: flex;}
 .display_grid {display: grid;}
@@ -375,7 +382,6 @@ header div h2 a:hover {
 .ff_1 { font-family: "Merriweather", serif;}
 
 
-
 .fs_20 {font-size: 20px;}
 .fs_30 {font-size: 30px;}
 .fs_50 {font-size: 50px;}
@@ -383,6 +389,7 @@ header div h2 a:hover {
 
 .fs_1rem {font-size: 1rem;}
 .fs_2rem {font-size: 2rem;}
+.fs_2p5rem {font-size: 2.5rem;}
 .fs_3rem {font-size: 3rem;}
 .fs_4rem {font-size: 4rem;}
 .fs_5rem {font-size: 5rem;}
@@ -392,6 +399,4 @@ header div h2 a:hover {
 .fs_9rem {font-size: 9rem;}
 .fs_10rem {font-size: 10rem;}
 
-
 .borderRadius_50p {border-radius: 50%;}
-
