justify some words

--- a/style.css
+++ b/style.css
@@ -235,6 +235,7 @@ header div h2 a:hover {
 
 .ta_start {text-align: start;}
 .ta_center {text-align: center;}
+.ta_justify {text-align: justify;}
 
 .br_5 {border-radius: 5px;}
 .br_15 {border-radius: 15px;}
