--- a/style.css
+++ b/style.css
@@ -29,11 +29,13 @@ body {
   font-size: 18px;
   border: none;
   outline: none;
-  background-color: rgb(209, 120, 68);
-  color: white;
+  background-color: rgb(245, 236, 231);
+  color: red;
   cursor: pointer; 
   padding: 15px;
-  border-radius: 4px;
+  border-radius: 50%;
+  height: 45px; 
+  width: 45px;
 }
 
 #myBtn:hover {
@@ -45,13 +47,6 @@ body {
 #resumeSection {
   color: #3f5706;
 }
-
-/* #emailForm * {
-  font-size: 20px;
-  border-radius: 3px;
-  border-width: 1px;
-  padding: 5px;
-} */
 
 
 /**** class selector *********/
@@ -72,43 +67,6 @@ body {
   object-fit: cover;
 }
 
-.loader {
-  border-radius: 50%;
-  border-style: solid;
-  border-color: rgba(23, 24, 23, 0.3);
-  border-top-color:  rgba(7, 117, 7, 0.3); 
-  border-bottom-color: rgba(7, 117, 7, 0.3); 
-}
-
-.time_20s {
-  -webkit-animation: spin 20s linear infinite; /* Safari */
-  animation: spin 20s linear infinite; 
-}
-
-.time_30s {
-  -webkit-animation: spin 30s linear infinite; /* Safari */
-  animation: spin 30s linear infinite; 
-}
-
-.time_40s {
-  -webkit-animation: spin 40s linear infinite; /* Safari */
-  animation: spin 40s linear infinite; 
-}
-
-
-
-/* Safari */
-@-webkit-keyframes spin {
-  0% { -webkit-transform: rotate(0deg); }
-  100% { -webkit-transform: rotate(360deg); }
-}
-
-@keyframes spin {
-  0% { transform: rotate(0deg); }
-  100% { transform: rotate(360deg); }
-}
-
-
 
 /***** hover ****************/
 header div h3:hover {
@@ -118,8 +76,6 @@ header div h3:hover {
 header div h2 a:hover {
   color: lightseagreen;
 } 
-
-
 
 
 /***** responsive ***********************/
